--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-streamlit
-opencv-python-headless
-deepface
-pillow
+streamlit==1.35.0
+opencv-python-headless==4.9.0.80
+deepface==0.0.83
+pillow==10.3.0
+
