--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 streamlit==1.35.0
-opencv-python-headless==4.9.0.80
-deepface==0.0.83
-pillow==10.3.0
-
+pandas==2.2.2
+numpy==1.26.4
+matplotlib==3.8.4
+Pillow==10.3.0
+scikit-learn==1.5.0
