--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
 pip>=24.0
-setuptools<70.0  # wichtig!
-Pillow==10.2.0    # nicht 10.3.0
+setuptools<70.0
+Pillow==10.2.0
 streamlit==1.35.0
 pandas==2.2.2
 numpy==1.26.4
 matplotlib==3.8.4
 scikit-learn==1.5.0
+opencv-python-headless==4.8.1.78
+deepface==0.0.91
+tensorflow-cpu==2.15.0
