--- a/requirements.txt
+++ b/requirements.txt
@@ -5,5 +5,5 @@ matplotlib==3.8.4
 scikit-learn==1.5.0
 Pillow>=10.0.0
 opencv-python-headless==4.8.1.78
-tensorflow==2.13.0
-deepface==0.0.89
+face-recognition==1.3.0
+dlib==19.24.2
