--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,6 @@
-streamlit==1.35.0
-pandas==2.2.2
-numpy==1.26.4
-matplotlib==3.8.4
-scikit-learn==1.5.0
-Pillow>=10.0.0
-opencv-python-headless==4.8.1.78
-face-recognition==1.3.0
-dlib==19.24.2
+streamlit
+pillow
+pandas
+numpy
+matplotlib
+opencv-python-headless
